--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="container" data-aos="zoom-out">
           <div class="row justify-content-center">
             <div class="col-lg-9">
-              <h2>Lek Hsiang Hui</h2>
+              <h2>John Doe</h2>
               <p>
                 I'm
                 <span
